--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>IT-job-market-analytics-rest-api</description>
 	<properties>
 		<java.version>17</java.version>
+		<jakarta.version>3.0.2</jakarta.version>
+		<hibernate.vakidation.version>8.0.0.Final</hibernate.vakidation.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -48,6 +50,16 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>${hibernate.vakidation.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
+			<version>${jakarta.version}</version>
 		</dependency>
 	</dependencies>
 
