fix: add queries to config file

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,13 @@
+available:
+  queries:
+    Java
+    Kotlin
+    Android
+    JavaScript
+    React
+    PHP
+    Laravel
+
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
