rework: `available.queries` config value is a list instead of a multi-line string

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,12 +1,12 @@
 available:
   queries:
-    Java
-    Kotlin
-    Android
-    JavaScript
-    React
-    PHP
-    Laravel
+    - Java
+    - Kotlin
+    - Android
+    - JavaScript
+    - React
+    - PHP
+    - Laravel
 
 spring:
   datasource:
