--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Publish to DockerHub
         uses: mr-smithers-excellent/docker-build-push@v6
         with:
-          image: itjobmarketanalytics/rest-api:dev
+          image: itjobmarketanalytics/rest-api
           registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
