--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
         uses: mr-smithers-excellent/docker-build-push@v6
         with:
           image: itjobmarketanalytics/rest-api
+          tags: dev
           registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
