--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Publish Docker Image to Docker Hub
 
 on:
   push:
-    branches: ['25-github-action-to-build-and-push-docker-image']
+    branches: ['dev']
 
 jobs:
   build:
