--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Publish Docker Image to Docker Hub
 
 on:
   push:
-    branches: ['dev']
+    branches: ['*']
 
 jobs:
   build:
@@ -14,7 +14,6 @@ jobs:
         uses: mr-smithers-excellent/docker-build-push@v6
         with:
           image: itjobmarketanalytics/rest-api
-          tags: dev
           registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
