config: queries list synchronized wit scheduler-service

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,10 +3,11 @@ available:
     - Java
     - Kotlin
     - Android
-    - JavaScript
+    - Javascript
     - React
     - PHP
-    - Laravel
+    - iOS
+    - .NET
 
 spring:
   datasource:
